--- a/C,Game/workbook/0x70.md
+++ b/C,Game/workbook/0x70.md
@@ -1,6 +1,6 @@
-# 0xFFFF. 강의 제목 [링크](#)
+# 0x70. 독하게 시작하는 C 프로그래밍 [링크](https://www.inflearn.com/course/%EB%8F%85%ED%95%98%EA%B2%8C-%EC%8B%9C%EC%9E%91%ED%95%98%EB%8A%94-c%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D)
 
-## 총 n강 ( hours  minutes)
+## 총 149강 ( 28 hours 58 minutes)
 
 ## 수강 기간 
 - 학습          : 2023.. ~ ing
