--- a/C,Game/workbook/0x73.md
+++ b/C,Game/workbook/0x73.md
@@ -1,80 +1,153 @@
-# 0x73. Windows 소켓 프로그래밍 입문에서 고성능 서버까지! [링크](https://www.inflearn.com/course/%EC%9C%88%EB%8F%84%EC%9A%B0-%EC%86%8C%EC%BC%93-%EC%9E%85%EB%AC%B8-%EA%B3%A0%EC%84%B1%EB%8A%A5-%EC%84%9C%EB%B2%84)
+# 0xFFFF. 강의 제목 [링크](#)
 
-## 총 47강 ( 9 hours 37 minutes)
+## 총 n강 ( hours  minutes)
 
 ## 수강 기간 
 - 학습          : 2023.. ~ ing
 
 ## Last Update (d)    
 
-![100%](https://progress-bar.dev/0/?scale=47&title=progress&width=500&color=babaca&suffix=/47)
+![100%](https://progress-bar.dev/1/?scale=1&title=progress&width=500&color=babaca&suffix=/1)
 
 ✅❌:hammer:
 | 번호 | 강의 제목 | Time | Check | Result |
 | :--: | :--: | :--: | :--: | :--: |
-| Section 0 | 들어가기에 앞서 | 5 Lectures / 1h 05m | ❌ |  |
-| Chapter 0-1 | 알고 있다고 가정하는 것들 | 11m 27s | ❌ | |
-| Chapter 0-2 | 수업의 최종 목표 | 05m 12s | ❌ | |
-| Chapter 0-3 | 개발 및 테스트 환경 구축 | 15m 33s | ❌ | | 
-| Chapter 0-4 | Win32 작업자 스레드 생성 (예제 포함) | 21m 16s | ❌ | | 
-| Chapter 0-5 | Win32 작업자 스레드 동기화 (예제 포함) | 12m 14s | ❌ | | 
+| Section 0 | Intro |  Lectures / m | ❌ |  |
+| Chapter 0-1 |  |  | ❌ | |
+| Chapter 0-2 |  |  | ❌ | |
+| Chapter 0-3 |  |  | ❌ | | 
 | | | | | |
-| Section 1 | TCP 소켓 프로그래밍 입문 | 7 Lectures / 1h 35m | ❌ | |
-| Chapter 1-1 | 소켓의 본질에 대한 이해 | 09m 27s | ❌ | | 
-| Chapter 1-2 | TCP 상태 다이어그램과 적절한 상태 전이 (수업자료 포함) | 14m 36s | ❌ | |
-| Chapter 1-3 | TCP 에코 서비스 전체 흐름 | 11m 42s | ❌ | | 
-| Chapter 1-4 | TCP 에코 서버 제작: 서버 접속대기 (예제 포함) | 18m 17s | ❌ | |
-| Chapter 1-5 | TCP 에코 서버 제작: 클라이언트 연결 받기 및 통신 | 13m 05s | ❌ | |
-| Chapter 1-6 | TCP 에코 클라이언트 제작 (예제 포함) | 09m 33s | ❌ | | 
-| Chapter 1-7 | 에코 클라이언트/서버 테스트 및 Wireshark로 확인 | 18m 21s | ❌ | | 
+| Section 1 |  |  Lectures / m | ❌ | |
+| Chapter 1-1 |  |  | ❌ | | 
+| Chapter 1-2 |  |  | ❌ | |
+| Chapter 1-3 |  |  | ❌ | | 
+| Chapter 1-4 |  |  | ❌ | |
+| Chapter 1-5 |  |  | ❌ | |
+| Chapter 1-6 |  |  | ❌ | | 
 | | | | | |
-| Section 2 | 소켓 옵션과 필수 이론 | 5 Lectures / 1h 08m | ❌ | |
-| Chapter 2-1 | 소켓 입/출력 버퍼 (예제포함) | 17m 06s | ❌ | | 
-| Chapter 2-2 | send()와 recv()는 1:1로 매핑되는가? | 14m 43s | ❌ | |
-| Chapter 2-3 | 소켓 입/출력 버퍼와 TCP_NODELAY 옵션 (예제포함) | 09m 02s | ❌ | | 
-| Chapter 2-4 | 서버 소켓과 SO_REUSEADDR 옵션 (예제 포함) | 17m 59s | ❌ | | 
-| Chapter 2-5 | 멀티스레드 에코 서버 (예제 포함) | 10m 06s | ❌ | | 
+| Section 2 |  |  Lectures / m | ❌ | |
+| Chapter 2-1 |  |  | ❌ | | 
+| Chapter 2-2 |  |  | ❌ | |
+| Chapter 2-3 |  |  | ❌ | | 
 | | | | | |
-| Section 3 | TCP 채팅 서버 - 기본 이론 | 5 Lectures / 58m | ❌ | |
-| Chapter 3-1 | 멀티스레드 채팅 서버 구조와 이론 | 12m 28s | ❌ | | 
-| Chapter 3-2 | 멀티스레드 기반 채팅 서버 (예제 포함) | 14m 43s | ❌ | |
-| Chapter 3-3 | 멀티스레드 기반 채팅 클라이언트 (예제 포함) | 09m 54s | ❌ | | 
-| Chapter 3-4 | 우아하지 않은 비정상 종료 | 10m 42s | ❌ | | 
-| Chapter 3-5 | MFC 채팅 서버와 클라이언트 (예제 포함) | 10m 27s | ❌ | | 
+| Section 3 |  |  Lectures / h m | ❌ | |
+| Chapter 3-1 |  |  | ❌ | | 
+| Chapter 3-2 |  |  | ❌ | |
+| Chapter 3-3 |  |  | ❌ | | 
+| Chapter 3-4 |  |  | ❌ | | 
+| Chapter 3-5 |  |  | ❌ | | 
+| Chapter 3-6 |  |  | ❌ | | 
+| Chapter 3-7 |  |  | ❌ | |
+| Chapter 3-8 |  |  | ❌ | | 
+| Chapter 3-9 |  |  | ❌ | | 
+| Chapter 3-10 |  |  | ❌ | | 
+| Chapter 3-11 |  |  | ❌ | | 
 | | | | | |
-| Section 4 | TCP 채팅 서버 - 성능 개선 | 5 Lectures / 49m | ❌ | | 
-| Chapter 4-1 | I/O 멀티플렉싱 채팅 서버로 개선 - 첫 번째 (예제 포함) | 13m 41s | ❌ | | 
-| Chapter 4-2 | I/O 멀티플렉싱 채팅 서버로 개선 - 두 번째 | 05m 55s | ❌ | | 
-| Chapter 4-3 | I/O 멀티플렉싱 채팅 서버로 개선 - 세 번째 | 12m 25s | ❌ | | 
-| Chapter 4-4 | Win32 Event select 채팅 서버로 개선 (예제 포함) | 08m 34s | ❌ | | 
-| Chapter 4-5 | MFC GUI 기반 Async select 채팅 서버 (예제 포함) | 08m 38s | ❌ | | 
+| Section 4 |  |  Lectures / h m | ❌ | | 
+| Chapter 4-1 |  |  | ❌ | | 
+| Chapter 4-2 |  |  | ❌ | | 
+| Chapter 4-3 |  |  | ❌ | | 
+| Chapter 4-4 |  |  | ❌ | | 
+| Chapter 4-5 |  |  | ❌ | | 
+| Chapter 4-6 |  |  | ❌ | | 
+| Chapter 4-7 |  |  | ❌ | | 
 | | | | | |
-| Section 5 | 파일 송/수신 | 5 Lectures / 1h 14m | ❌ | | 
-| Chapter 5-1 | 기본 구조에 대한 설명 | 14m 18s | ❌ | | 
-| Chapter 5-2 | 파일 송신 서버 제작 (예제 포함) | 08m 54s | ❌ | | 
-| Chapter 5-3 | 파일 수신 클라이언트 제작 (예제 포함) | 12m 13s | ❌ | | 
-| Chapter 5-4 | Win32 API 기반 파일 송/수신 (예제 포함) | 11m 34s | ❌ | | 
-| Chapter 5-5 | 대표적인 TCP 장애 유형과 연결에 대한 정의 | 27m 07s | ❌ | |  
+| Section 5 |  |  Lectures / h m | ❌ | | 
+| Chapter 5-1 |  |  | ❌ | | 
+| Chapter 5-2 |  |  | ❌ | | 
+| Chapter 5-3 |  |  | ❌ | | 
+| Chapter 5-4 |  |  | ❌ | | 
+| Chapter 5-5 |  |  | ❌ | | 
+| Chapter 5-6 |  |  | ❌ | | 
+| Chapter 5-7 |  |  | ❌ | | 
 | | | | | |
-| Section 6 | 파일 송/수신과 프로토콜 설계 | 5 Lectures / 48m | ❌ | | 
-| Chapter 6-1 | 파일 송/수신 서비스 구조 설계 | 09m 08s | ❌ | | 
-| Chapter 6-2 | 응용 프로그램 프로토콜 디자인 | 08m 10s | ❌ | | 
-| Chapter 6-3 | 프로토콜이 적용된 파일 송신 서버 제작 (예제 포함) | 12m 51s | ❌ | | 
-| Chapter 6-4 | 프로토콜이 적용된 파일 수신 클라이언트 제작 (예제 포함) | 08m 42s | ❌ | | 
-| Chapter 6-5 | 파일 송수신 테스트 | 09m 13s | ❌ | | 
+| Section 6 |  |  Lectures / h m | ❌ | | 
+| Chapter 6-1 |  |  | ❌ | | 
+| Chapter 6-2 |  |  | ❌ | | 
+| Chapter 6-3 |  |  | ❌ | | 
+| Chapter 6-4 |  |  | ❌ | | 
+| Chapter 6-5 |  |  | ❌ | | 
+| Chapter 6-6 |  |  | ❌ | | 
+| Chapter 6-7 |  |  | ❌ | | 
 | | | | | |
-| Section 7 | 서버 성능 개선 | 4 Lectures / 1h 27m | ❌ | | 
-| Chapter 7-1 | 이벤트 기반 비동기 파일 입/출력 (예제 포함) | 22m 32s | ❌ | | 
-| Chapter 7-2 | Callback 기반 비동기 파일 입/출력 (예제 포함) | 23m 59s | ❌ | | 
-| Chapter 7-3 | IOCP 모델 | 19m 25s | ❌ | | 
-| Chapter 7-4 | IOCP 기반 채팅 서버 (예제 포함) | 21m 39s | ❌ | | 
+| Section 7 |  |  Lectures / h m | ❌ | | 
+| Chapter 7-1 |  |  | ❌ | | 
+| Chapter 7-2 |  |  | ❌ | | 
+| Chapter 7-3 |  |  | ❌ | | 
+| Chapter 7-4 |  |  | ❌ | | 
+| Chapter 7-5 |  |  | ❌ | | 
+| Chapter 7-6 |  |  | ❌ | | 
+| Chapter 7-7 |  |  | ❌ | | 
 | | | | | |
-| Section 8 | UDP와 브로드캐스트 | 3 Lectures / 17m | ❌ | | 
-| Chapter 8-1 | UDP 프로토콜 특징 | 05m 49s | ❌ | | 
-| Chapter 8-2 | UDP 송/수신 (예제 포함) | 04m 21s | ❌ | | 
-| Chapter 8-3 | UDP 브로드캐스트 송/수신 (예제 포함) | 06m 54s | ❌ | | 
+| Section 8 |  |  Lectures / h m | ❌ | | 
+| Chapter 8-1 |  |  | ❌ | | 
+| Chapter 8-2 |  |  | ❌ | | 
+| Chapter 8-3 |  |  | ❌ | | 
+| Chapter 8-4 |  |  | ❌ | | 
+| Chapter 8-5 |  |  | ❌ | | 
+| Chapter 8-6 |  |  | ❌ | | 
+| Chapter 8-7 |  |  | ❌ | | 
 | | | | | |
-| Section 9 | [부록] | 3 Lectures / 13m | ❌ | | 
-| Chapter 9-1 | DNS 질의 방법 (예제 포함) | 05m 02s | ❌ | | 
-| Chapter 9-2 | 간단한 HTTP, FTP 클라이언트 (예제 포함) | 03m 32s | ❌ | | 
-| Chapter 9-3 | 윈도우에서 어댑터 정보 확인 방법 (예제 포함) | 04m 34s | ❌ | |
+| Section 9 |  |  Lectures / h m | ❌ | | 
+| Chapter 9-1 |  |  | ❌ | | 
+| Chapter 9-2 |  |  | ❌ | | 
+| Chapter 9-3 |  |  | ❌ | | 
+| Chapter 9-4 |  |  | ❌ | | 
+| Chapter 9-5 |  |  | ❌ | | 
+| Chapter 9-6 |  |  | ❌ | | 
+| Chapter 9-7 |  |  | ❌ | | 
+| | | | | |
+| Section 10 |  |  Lectures / h m | ❌ | | 
+| Chapter 10-1 |  |  | ❌ | | 
+| Chapter 10-2 |  |  | ❌ | | 
+| Chapter 10-3 |  |  | ❌ | | 
+| Chapter 10-4 |  |  | ❌ | | 
+| Chapter 10-5 |  |  | ❌ | | 
+| Chapter 10-6 |  |  | ❌ | | 
+| Chapter 10-7 |  |  | ❌ | | 
+| | | | | |
+| Section 11 |  |  Lectures / h m | ❌ | | 
+| Chapter 11-1 |  |  | ❌ | | 
+| Chapter 11-2 |  |  | ❌ | | 
+| Chapter 11-3 |  |  | ❌ | | 
+| Chapter 11-4 |  |  | ❌ | | 
+| Chapter 11-5 |  |  | ❌ | | 
+| Chapter 11-6 |  |  | ❌ | | 
+| Chapter 11-7 |  |  | ❌ | | 
+| | | | | |
+| Section 12 |  |  Lectures / h m | ❌ | | 
+| Chapter 12-1 |  |  | ❌ | | 
+| Chapter 12-2 |  |  | ❌ | | 
+| Chapter 12-3 |  |  | ❌ | | 
+| Chapter 12-4 |  |  | ❌ | | 
+| Chapter 12-5 |  |  | ❌ | | 
+| Chapter 12-6 |  |  | ❌ | | 
+| Chapter 12-7 |  |  | ❌ | | 
+| | | | | |
+| Section 13 |  |  Lectures / h m | ❌ | | 
+| Chapter 13-1 |  |  | ❌ | | 
+| Chapter 13-2 |  |  | ❌ | | 
+| Chapter 13-3 |  |  | ❌ | | 
+| Chapter 13-4 |  |  | ❌ | | 
+| Chapter 13-5 |  |  | ❌ | | 
+| Chapter 13-6 |  |  | ❌ | | 
+| Chapter 13-7 |  |  | ❌ | | 
+| | | | | |
+| Section 14 |  |  Lectures / h m | ❌ | | 
+| Chapter 14-1 |  |  | ❌ | | 
+| Chapter 14-2 |  |  | ❌ | | 
+| Chapter 14-3 |  |  | ❌ | | 
+| Chapter 14-4 |  |  | ❌ | | 
+| Chapter 14-5 |  |  | ❌ | | 
+| Chapter 14-6 |  |  | ❌ | | 
+| Chapter 14-7 |  |  | ❌ | | 
+| | | | | |
+| Section 15 |  |  Lectures / h m | ❌ | | 
+| Chapter 15-1 |  |  | ❌ | | 
+| Chapter 15-2 |  |  | ❌ | | 
+| Chapter 15-3 |  |  | ❌ | | 
+| Chapter 15-4 |  |  | ❌ | | 
+| Chapter 15-5 |  |  | ❌ | | 
+| Chapter 15-6 |  |  | ❌ | | 
+| Chapter 15-7 |  |  | ❌ | | 
+| | | | | |
